# wgpu_snake

./: Cargo.toml  README.md
res/: snake.xcf
src/: engine.rs  game.rs  game_elements.rs  graphics.rs  input.rs  main.rs  map.rs  snake.rs  world.rs
src/shaders/: line.wgsl  quad.wgsl  world.wgsl
